src/test/deca/syntax/invalid/created/operande_manquante/gt__a.deca
// Description :
//    test gt pour une opérande manquante
//
// Resultats :
//		Erreur syntaxique
//    	Ligne 11: operante manquante

{
c =  > a;
}
